# trx-rs

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  APRSFI_IMPLEMENTATION.rs  AUTH_IMPLEMENTATION.rs  CLAUDE.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.lock.license  Cargo.toml  DECODER_LOG_IMPLEMENTATION.rs  ENHANCEMENT.md  FIX_PLAN.md  MANUAL.md  MULTI.md  OPTIMIZATION.md  OVERVIEW.md  README.md  RECORDER.md  SCHEDULER.md  SDR.md  VCHANNELS.md  VIRTAUDIO.md  WIP.md  test-airspy.toml  trx-client.toml.example  trx-rs.toml.example  trx-server.toml.example
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: sync-wiki.yml  wiki.yml
LICENSES/: BSD-2-Clause.txt
aidocs/: AGENTS.md  CONFIGURATION.md  OVERVIEW.md  SDR.md  SKILLS.md  UI-CAPS.md  WEBGL.md
autogendoc/: AUTH.md  CONFIGURATION.md
doc/: frontend_improvements.md
docs/: Architecture.md  Decoder_Consolidation.md  Home.md  Improvement-Areas.md  Optimization-Guidelines.md  Planned-Features.md  Settings-Menu-UX-Analysis.md  UX_Guidelines.md  User-Manual.md  Wxsat-Map-Overlay.md  frontend_improvements.md  scheduler_improvements.md  wefax_plan.md
examples/trx-plugin-example/: Cargo.toml  README.md
examples/trx-plugin-example/src/: lib.rs
script/: dummy-server.sh
src/decoders/trx-decode-log/: Cargo.toml
src/decoders/trx-decode-log/src/: lib.rs
src/decoders/trx-ftx/: Cargo.toml  FTX_CRATE.md  README.md
src/decoders/trx-ftx/src/: bitmetrics.rs  callsign_hash.rs  constants.rs  crc.rs  decode.rs  decoder.rs  downsample.rs  encode.rs  ft2.rs  ft2_sync.rs  ldpc.rs  lib.rs  message.rs  monitor.rs  protocol.rs  text.rs
src/decoders/trx-ftx/src/common/: callsign_hash.rs  constants.rs  crc.rs  decode.rs  encode.rs  ldpc.rs  message.rs  mod.rs  monitor.rs  osd.rs  protocol.rs
src/decoders/trx-ftx/src/ft2/: bitmetrics.rs  decode.rs  downsample.rs  mod.rs  osd.rs  sync.rs
src/decoders/trx-ftx/src/ft4/: mod.rs
src/decoders/trx-ftx/src/ft8/: mod.rs
src/decoders/trx-noaa/: Cargo.toml
src/decoders/trx-noaa/src/: apt.rs  image_enc.rs  lib.rs
src/trx-app/: Cargo.toml
src/trx-app/src/: config.rs  lib.rs  logging.rs  plugins.rs  shared_config.rs  util.rs
src/trx-backend/: Cargo.toml
src/trx-backend/src/: ft817.rs  lib.rs
src/trx-backend/src/trx-backend-ft817/src/: lib.rs
src/trx-bin/: Cargo.toml
src/trx-bin/src/: config.rs  main.rs  remote_client.rs
src/trx-client/: Cargo.toml
src/trx-client/src/: audio_bridge.rs  audio_client.rs  config.rs  history_store.rs  main.rs  plugins.rs  remote_client.rs
src/trx-client/trx-frontend/: Cargo.toml
src/trx-client/trx-frontend/src/: lib.rs
src/trx-client/trx-frontend/trx-frontend-appkit/: Cargo.toml
src/trx-client/trx-frontend/trx-frontend-appkit/src/: helpers.rs  lib.rs  model.rs  server.rs  ui.rs
src/trx-client/trx-frontend/trx-frontend-http/: Cargo.toml  build.rs
src/trx-client/trx-frontend/trx-frontend-http-json/: Cargo.toml
src/trx-client/trx-frontend/trx-frontend-http-json/src/: lib.rs  server.rs
src/trx-client/trx-frontend/trx-frontend-http/assets/web/: app.js  aprs.js  bandplan.json  cw.js  decode-history-worker.js  index.html  leaflet-ais-tracksymbol.js  map-core.js  screenshot.js  style.css  themes.css  webgl-renderer.js
src/trx-client/trx-frontend/trx-frontend-http/assets/web/plugins/: ais.js  aprs.js  background-decode.js  bookmarks.js  cw.js  ft2.js  ft4.js  ft8.js  hf-aprs.js  sat-scheduler.js  sat.js  scheduler.js  vchan.js  vdes.js  wefax.js  wspr.js  wxsat.js
src/trx-client/trx-frontend/trx-frontend-http/src/: api.rs  audio.rs  auth.rs  background_decode.rs  bookmarks.rs  lib.rs  recorder.rs  scheduler.rs  server.rs  status.rs  vchan.rs
src/trx-client/trx-frontend/trx-frontend-http/src/api/: assets.rs  bookmarks.rs  decoder.rs  mod.rs  recorder.rs  rig.rs  sse.rs  vchan.rs
src/trx-client/trx-frontend/trx-frontend-qt/: Cargo.toml  REQUIREMENTS.md
src/trx-client/trx-frontend/trx-frontend-qt/qml/: Main.qml
src/trx-client/trx-frontend/trx-frontend-qt/src/: server.rs
src/trx-client/trx-frontend/trx-frontend-rigctl/: Cargo.toml
src/trx-client/trx-frontend/trx-frontend-rigctl/src/: lib.rs  server.rs
src/trx-configurator/: Cargo.toml
src/trx-configurator/src/: check.rs  detect.rs  main.rs  prompts.rs  writer.rs
src/trx-core/: Cargo.toml
src/trx-core/src/: audio.rs  client.rs  decode.rs  geo.rs  lib.rs  vchan.rs
src/trx-core/src/math/: bcd.rs  mod.rs
src/trx-core/src/radio/: band.rs  freq.rs  mod.rs
src/trx-core/src/rig/: command.rs  mod.rs  request.rs  response.rs  state.rs
src/trx-core/src/rig/controller/: events.rs  executor.rs  handlers.rs  machine.rs  mod.rs  policies.rs
src/trx-frontend/: Cargo.toml
src/trx-frontend-http/: Cargo.toml
src/trx-frontend/src/trx-frontend-qt/: Cargo.toml
src/trx-frontend/src/trx-frontend-qt/src/: lib.rs
src/trx-ft8/: build.rs
src/trx-protocol/: Cargo.toml
src/trx-protocol/src/: auth.rs  codec.rs  decoders.rs  lib.rs  mapping.rs  types.rs
src/trx-reporting/: Cargo.toml
src/trx-reporting/src/: aprsfi.rs  lib.rs  pskreporter.rs
src/trx-server/: Cargo.toml  build.rs
src/trx-server/src/: aprsfi.rs  audio.rs  config.rs  decode_logs.rs  error.rs  history_store.rs  listener.rs  main.rs  pskreporter.rs  rig_handle.rs  rig_task.rs
src/trx-server/src/decode/: aprs.rs  cw.rs  mod.rs
src/trx-server/trx-backend/: Cargo.toml
src/trx-server/trx-backend/src/: dummy.rs  lib.rs  vchan.rs
src/trx-server/trx-backend/trx-backend-ft450d/: Cargo.toml
src/trx-server/trx-backend/trx-backend-ft450d/src/: lib.rs
src/trx-server/trx-backend/trx-backend-ft817/: Cargo.toml
src/trx-server/trx-backend/trx-backend-ft817/src/: lib.rs
src/trx-server/trx-backend/trx-backend-soapysdr/: Cargo.toml
src/trx-server/trx-backend/trx-backend-soapysdr/src/: demod.rs  dsp.rs  lib.rs  real_iq_source.rs  vchan_impl.rs
src/trx-server/trx-backend/trx-backend-soapysdr/src/demod/: am.rs  amcquam.rs  fm.rs  math.rs  math_arm.rs  math_x86.rs  sam.rs  ssb.rs  wfm.rs
src/trx-server/trx-backend/trx-backend-soapysdr/src/dsp/: channel.rs  filter.rs  spectrum.rs
(+65 files in other folders)
