# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[workspace]
members = [
    "src/trx-bin",
    "src/trx-backend",
    "src/trx-backend/src/trx-backend-ft817",
    "src/trx-core",
    "src/trx-frontend",
    "src/trx-frontend/src/trx-frontend-http",
    "src/trx-frontend/src/trx-frontend-http-json",
    "src/trx-frontend/src/trx-frontend-qt",
    "src/trx-frontend/src/trx-frontend-rigctl",
]
resolver = "2"

[workspace.dependencies]
tokio = "1"
tokio-serial = "5"
serde = "1"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4"
