# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[workspace]
members = [
    "src/decoders/trx-aprs",
    "src/decoders/trx-cw",
    "src/decoders/trx-decode-log",
    "src/decoders/trx-ft8",
    "src/decoders/trx-rds",
    "src/decoders/trx-wspr",
    "src/trx-core",
    "src/trx-protocol",
    "src/trx-app",
    "src/trx-server",
    "src/trx-server/trx-backend",
    "src/trx-server/trx-backend/trx-backend-ft817",
    "src/trx-server/trx-backend/trx-backend-ft450d",
    "src/trx-server/trx-backend/trx-backend-soapysdr",
    "src/trx-client",
    "src/trx-client/trx-frontend",
    "src/trx-client/trx-frontend/trx-frontend-http",
    "src/trx-client/trx-frontend/trx-frontend-http-json",
    "src/trx-client/trx-frontend/trx-frontend-rigctl",
]
resolver = "2"

[workspace.dependencies]
tokio = "1"
tokio-serial = "5"
serde = "1"
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = "4"
