# SPDX-FileCopyrightText: 2026 Stan Grams <sjg@haxx.space>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-app"
version.workspace = true
edition = "2021"
license = "BSD-2-Clause"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = "6"
hex = "0.4"
sha2 = "0.10"
thiserror = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
