# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-backend"
version = "0.1.0"
edition = "2021"

[features]
default = ["ft817"]
ft817 = ["dep:trx-backend-ft817"]

[dependencies]
trx-core = { path = "../trx-core" }
trx-backend-ft817 = { path = "src/trx-backend-ft817", optional = true }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
