# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["soapysdr"]
soapysdr = ["trx-backend/soapysdr"]
soapysdr-sys = ["soapysdr", "trx-backend/soapysdr-sys"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = "1"
cpal = "0.15"
opus = "0.3"
trx-app = { path = "../trx-app" }
trx-backend = { path = "trx-backend" }
trx-backend-soapysdr = { path = "trx-backend/trx-backend-soapysdr", optional = true }
trx-core = { path = "../trx-core" }
trx-aprs = { path = "../decoders/trx-aprs" }
trx-cw = { path = "../decoders/trx-cw" }
trx-decode-log = { path = "../decoders/trx-decode-log" }
trx-ft8 = { path = "../decoders/trx-ft8" }
trx-wspr = { path = "../decoders/trx-wspr" }
trx-protocol = { path = "../trx-protocol" }
