# SPDX-FileCopyrightText: 2026 Stan Grams <sjg@haxx.space>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-server"
version.workspace = true
edition = "2021"
build = "build.rs"

[features]
default = ["soapysdr"]
soapysdr = ["trx-backend/soapysdr"]

[dependencies]
flate2 = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = "6"
pickledb = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
bytes = "1"
uuid = { workspace = true }
cpal = "0.15"
num-complex = "0.4"
opus = "0.3"
trx-app = { path = "../trx-app" }
trx-backend = { path = "trx-backend", features = ["soapysdr"] }
trx-ais = { path = "../decoders/trx-ais" }
trx-vdes = { path = "../decoders/trx-vdes" }
trx-core = { path = "../trx-core" }
trx-aprs = { path = "../decoders/trx-aprs" }
trx-cw = { path = "../decoders/trx-cw" }
trx-decode-log = { path = "../decoders/trx-decode-log" }
trx-ftx = { path = "../decoders/trx-ftx" }
trx-wspr = { path = "../decoders/trx-wspr" }
trx-wxsat = { path = "../decoders/trx-wxsat" }
trx-protocol = { path = "../trx-protocol" }
trx-reporting = { path = "../trx-reporting" }