# SPDX-FileCopyrightText: 2026 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-decode-log"
version = "0.1.0"
edition = "2021"

[dependencies]
trx-core = { path = "../../trx-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
