# SPDX-FileCopyrightText: 2026 Stan Grams <sjg@haxx.space>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-decode-log"
version.workspace = true
edition = "2021"

[dependencies]
trx-core = { path = "../../trx-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
