# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
trx-core = { path = "../../trx-core" }
tokio = { workspace = true, features = ["sync"] }
