# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-frontend-qt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
qt = ["dep:qmetaobject"]

[dependencies]
trx-core = { path = "../../../trx-core" }
trx-frontend = { path = "../.." }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
qmetaobject = { version = "0.2", optional = true }
