# SPDX-FileCopyrightText: 2025 Stanislaw Grams <stanislawgrams@gmail.com>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-backend-ft450d"
version = "0.1.0"
edition = "2021"

[dependencies]
trx-core = { path = "../../../trx-core" }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
