# SPDX-FileCopyrightText: 2026 Stan Grams <sjg@haxx.space>
#
# SPDX-License-Identifier: BSD-2-Clause

[package]
name = "trx-backend-ft817"
version.workspace = true
edition = "2021"

[dependencies]
trx-core = { path = "../../../trx-core" }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
